@@ -24,11 +24,9 @@ import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.EnumSet;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Random;
-import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
@@ -62,6 +60,8 @@ import org.apache.solr.common.params.ShardParams;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.core.NodeRoles;
+import org.apache.solr.core.SolrCore;
+import org.apache.solr.core.SyntheticSolrCore;
 import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.servlet.CoordinatorHttpSolrCall;
 import org.slf4j.Logger;
@@ -76,7 +76,6 @@ public class TestCoordinatorRole extends SolrCloudTestCase {
     try {
       CloudSolrClient client = cluster.getSolrClient();
       String COLLECTION_NAME = "test_coll";
-      String SYNTHETIC_COLLECTION = CoordinatorHttpSolrCall.getSyntheticCollectionName("conf");
       CollectionAdminRequest.createCollection(COLLECTION_NAME, "conf", 2, 2)
           .process(cluster.getSolrClient());
       cluster.waitForActiveCollection(COLLECTION_NAME, 2, 4);
@@ -105,14 +104,20 @@ public class TestCoordinatorRole extends SolrCloudTestCase {
 
       assertEquals(10, rslt.getResults().size());
 
+      String SYNTHETIC_COLLECTION =
+          CoordinatorHttpSolrCall.getSyntheticCollectionNameFromConfig("conf");
       DocCollection collection =
           cluster.getSolrClient().getClusterStateProvider().getCollection(SYNTHETIC_COLLECTION);
-      assertNotNull(collection);
+      // this should be empty as synthetic collection does not register with ZK
+      assertNull(collection);
 
-      Set<String> expectedNodes = new HashSet<>();
-      expectedNodes.add(coordinatorJetty.getNodeName());
-      collection.forEachReplica((s, replica) -> expectedNodes.remove(replica.getNodeName()));
-      assertTrue(expectedNodes.isEmpty());
+      String syntheticCoreName = CoordinatorHttpSolrCall.getSyntheticCoreNameFromConfig("conf");
+      try (SolrCore syntheticCore =
+          coordinatorJetty.getCoreContainer().getCore(syntheticCoreName)) {
+        assertNotNull(syntheticCore);
+        assertTrue(syntheticCore instanceof SyntheticSolrCore);
+        assertEquals("conf", syntheticCore.getCoreDescriptor().getConfigSet());
+      }
     } finally {
       cluster.shutdown();
     }
@@ -124,7 +129,6 @@ public class TestCoordinatorRole extends SolrCloudTestCase {
     try {
       CloudSolrClient client = cluster.getSolrClient();
       String COLLECTION_NAME = "test_coll";
-      String SYNTHETIC_COLLECTION = CoordinatorHttpSolrCall.getSyntheticCollectionName("conf");
       for (int j = 1; j <= 10; j++) {
         String collname = COLLECTION_NAME + "_" + j;
         CollectionAdminRequest.createCollection(collname, "conf", 2, 2)
@@ -170,15 +174,6 @@ public class TestCoordinatorRole extends SolrCloudTestCase {
 
         assertEquals(10, rslt.getResults().size());
       }
-
-      DocCollection collection =
-          cluster.getSolrClient().getClusterStateProvider().getCollection(SYNTHETIC_COLLECTION);
-      assertNotNull(collection);
-
-      int coordNode1NumCores = coordinatorJetty1.getCoreContainer().getNumAllCores();
-      assertEquals("Unexpected number of cores found for coordinator node", 1, coordNode1NumCores);
-      int coordNode2NumCores = coordinatorJetty2.getCoreContainer().getNumAllCores();
-      assertEquals("Unexpected number of cores found for coordinator node", 1, coordNode2NumCores);
     } finally {
       cluster.shutdown();
     }
@@ -572,15 +567,6 @@ public class TestCoordinatorRole extends SolrCloudTestCase {
       for (Future<?> testFuture : testFutures) {
         testFuture.get(); // check for any exceptions/failures
       }
-
-      // number of replicas created in the synthetic collection should be one per coordinator node
-      assertEquals(
-          COORDINATOR_NODE_COUNT,
-          client
-              .getClusterState()
-              .getCollection(CoordinatorHttpSolrCall.getSyntheticCollectionName("conf"))
-              .getReplicas()
-              .size());
 
       executorService.shutdown();
       executorService.awaitTermination(10, TimeUnit.SECONDS);
